[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myrepairapp-api"
version = "0.0.0"
description = "A Python wrapper for MyRepairApp that uses their public API."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "scooglat", email = "jaanov2013@gmail.com" },
]
maintainers = [
    { name = "scooglat", email = "jaanov2013@gmail.com" },
]
keywords = ["python", "package", "myrepairapp", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "rich",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/__init__.py",
    "src/api.py",
    "src/checkin_ticket.py",
    "src/exceptions.py",
    "src/inventory_item.py",
]

[project.urls]
Documentation = "https://myrepairapp-api.readthedocs.io/"
Repository = "https://github.com/the-sluggiest-cat/myrepairapp-api"
Issues = "https://github.com/the-sluggiest-cat/myrepairapp-api/issues"